@@ -18,6 +18,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #10203: sqlite3.Row now truly supports sequence protocol.  In particulr
+  it supports reverse() and negative indices.  Original patch by Claudiu Popa.
+
 - Issue #8743: Fix interoperability between set objects and the
   collections.Set() abstract base class.
 
